# OpenGLRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  configure.bat  readme.MD
app/: CMakeLists.txt  main.cpp
res/models/rx7/: body white.tga  body.tga  brake.tga  carpet.tga  chrome1.tga  chrome2.tga  dam bump.tga  digits.tga  disk.tga  engine.tga  lights und.tga  lights.tga  rim.tga  rx7.max  rx7.mtl  rx7_FR.max  seat.tga  under.tga  under2.tga  vehiclescratch64.tga  wheel.tga  whitea128a.tga
res/shaders/: Interpolation_Fragment.shader  Interpolation_Vertex.shader  Vetroscope_vertex.shader  basic_fragment.shader  basic_vertex.shader  fragment.shader  light_source_fragment.shader  light_source_vertex.shader  vertex.shader  vetroscope_fragment.shader
src/: Bresenham.cpp  Bresenham.h  Camera.cpp  Camera.h  CmakeLists.txt  IndexBuffer.h  LightType.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h  util.cpp  util.h
tests/: CmakeLists.txt
tests/Bresenhams/: Bresenham.cpp  CmakeLists.txt
tests/Interpolation/: CMakeLists.txt  Interpolation.cpp
tests/Vetroscope/: CmakeLists.txt  Vetroscope.cpp
